--- a/Presentation_Layer/templates/contractcard.html
+++ b/Presentation_Layer/templates/contractcard.html
@@ -6,4 +6,8 @@
   </div>
   <div class="type-of-job-main-container">{%JOBTYPE%}</div>
   <div class="{%ONCEOFF%}">{%CONTRACTTYPE%}</div>
+  <div class="contract-details-main-container">
+    <h3>{%STARTDATE%}</h3>
+    <p>{%TIMEPERIOD%}</p>
+  </div>
 </div>
