--- a/public/css/login.css
+++ b/public/css/login.css
@@ -17,6 +17,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
 }
 
 .right-container {
@@ -62,10 +63,10 @@ body {
 
 .login-main-container {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 100%;
+  height: 70%;
   width: 100%;
 }
 
@@ -83,9 +84,7 @@ body {
 }
 
 .login-header-container {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
+  width: 100%;
 }
 
 .login-header-container h1 {
@@ -145,7 +144,7 @@ body {
 }
 
 .login-button {
-  height: 4vh;
+  height: 5vh;
   width: 100%;
   background: linear-gradient(90deg, #768e2f, #caf451);
   font-size: 2vh;
