--- a/public/css/reporting.css
+++ b/public/css/reporting.css
@@ -124,7 +124,7 @@ body {
   display: flexbox;
   width: 100%;
   height: 12vh;
-  background: linear-gradient(90deg, #AB2F3A 0%, #451317 100%);
+  background: linear-gradient(90deg, #ab2f3a 0%, #451317 100%);
   border-radius: 6px;
   display: flex;
   justify-content: center;
@@ -134,15 +134,13 @@ body {
 }
 
 .main-title-container h1 {
-  font-weight: 400;
-  font-size: 3vh;
-  color: #fff;
+  font-weight: 300;
+  font-size: 4vh;
 }
 
 .main-title-container h3 {
-  font-weight: 300;
-  font-size: 1.8vh;
-  color: #fff;
+  font-weight: 100;
+  font-size: 2vh;
 }
 
 .stats-container {
@@ -157,7 +155,7 @@ body {
 
 .statistics-header {
   text-align: left;
-  font-family: 'Inter', sans-serif;
+  font-family: "Inter", sans-serif;
   font-size: 2vh;
   font-weight: 300;
   margin-bottom: 2vh;
@@ -175,11 +173,11 @@ body {
 
 .select-view {
   position: relative;
-  width: 250px;
-  height: 24px;
+  width: 30vh;
+  height: 3vh;
   display: flex;
   align-items: center;
-  border: 3px solid #AB2F3A;
+  border: 1px solid #ab2f3a;
   border-radius: 20px;
 }
 
@@ -191,13 +189,17 @@ body {
   font-size: 1.2vh;
   padding: 0.1rem 0.5rem;
   appearance: none;
+  outline: none;
 }
 
 .select-view::after {
-  content: '▼';
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  content: "▼";
   font-size: 14px;
   color: #fff;
-  background: linear-gradient(180deg, #A92F39 0%, #431317 100%);
+  background: linear-gradient(180deg, #a92f39 0%, #431317 100%);
   border-radius: 0 20px 20px 0;
   height: 100%;
   position: absolute;
@@ -208,11 +210,11 @@ body {
 
 .search-bar {
   position: relative;
-  width: 300px;
-  height: 24px;
+  width: 30vh;
+  height: 3vh;
   display: flex;
   align-items: center;
-  border: 3px solid #AB2F3A;
+  border: 1px solid #ab2f3a;
   border-radius: 20px;
 }
 
@@ -223,6 +225,7 @@ body {
   flex-grow: 1;
   font-size: 1.2vh;
   padding: 0.1rem 0.5rem;
+  outline: none;
 }
 
 .search-bar button {
@@ -234,19 +237,15 @@ body {
   align-items: center;
   justify-content: center;
   height: 100%;
-  margin-right: 5px;
+  background: linear-gradient(180deg, #a92f39 0%, #431317 100%);
+  width: 3vh;
+  border-radius: 0 20px 20px 0;
 }
 
 .search-bar button img {
-  font-size: 4px;
+  height: 1.8vh;
   color: #fff;
-  background: linear-gradient(180deg, #A92F39 0%, #431317 100%);
   border-radius: 0 20px 20px 0;
-  height: 100%;
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
-  right: 0px;
 }
 
 .table {
@@ -261,8 +260,9 @@ body {
   padding: 1.5vh;
   background-color: #1e1e1e;
   color: white;
-  font-size: 1.8vh;
+  font-size: 1.4vh;
   border-radius: 0;
+  font-weight: 200;
 }
 
 .table-column:nth-child(even) {
@@ -272,7 +272,7 @@ body {
 }
 
 .table-column:nth-child(odd) {
-  background-color: #A52E38;
+  background-color: #a52e38;
   min-height: 60vh;
 }
 
