--- a/public/css/review.css
+++ b/public/css/review.css
@@ -6,7 +6,7 @@
 
 body {
   font-family: "Inter", sans-serif;
-  background: #A52E38;
+  background: #a52e38;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -90,7 +90,9 @@ label {
   font-weight: bold;
 }
 
-input, select, textarea {
+input,
+select,
+textarea {
   width: 100%;
   padding: 10px;
   margin-bottom: 20px;
@@ -101,7 +103,9 @@ input, select, textarea {
   font-family: "Inter", sans-serif;
 }
 
-input:focus, select:focus, textarea:focus {
+input:focus,
+select:focus,
+textarea:focus {
   outline: none;
   border-color: #ff007f;
 }
@@ -130,5 +134,75 @@ button {
 }
 
 button:hover {
-  background-color: #e60073;
+  background-color: #e60073;
+}
+
+#toastbox {
+  position: absolute;
+  top: 7vh;
+  right: 2vh;
+  display: flex;
+  align-items: flex-end;
+  flex-direction: column;
+  overflow: hidden;
+  padding: 20px;
+  z-index: 999;
+}
+
+.toast {
+  width: 35vh;
+  height: 10vh;
+  background-color: #fff;
+  font-weight: 300;
+  margin: 2vh 0;
+  border: #a52e38 solid 2px;
+  display: flex;
+  align-items: center;
+  border-radius: 10px;
+  position: relative;
+  animation: slide-left 0.1s ease forwards;
+}
+
+.toast i {
+  margin: 0 3vh;
+  font-size: 2vh;
+  color: green;
+}
+
+.toast p {
+  color: #742028;
+  font-size: 1.5vh;
+}
+
+.toast .error i {
+  color: red;
+}
+
+.toast::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 0.5vh;
+  background: green;
+  animation: animate 4s linear forwards;
+  border-bottom: green solid 2px;
+  border-bottom-left-radius: 50px;
+}
+
+@keyframes animate {
+  100% {
+    width: 0;
+    right: 100px;
+  }
+}
+
+@keyframes slide-left {
+  from {
+    transform: translateX(100px);
+  }
+  to {
+    transform: translateX(0);
+  }
 }
