--- a/public/css/technician.css
+++ b/public/css/technician.css
@@ -135,6 +135,7 @@ body {
   padding: 4vh;
   width: 150vh;
   margin-left: 40vh;
+  width: 80vw;
 }
 .main-title-container {
   width: 100%; /* Title container spans full width */
@@ -252,4 +253,69 @@ body {
   cursor: pointer;
   background: linear-gradient(to right, #995526, #ff8e3f);
   transition: 500ms;
+}
+
+#toastbox {
+  position: absolute;
+  top: 7vh;
+  right: 2vh;
+  display: flex;
+  align-items: flex-end;
+  flex-direction: column;
+  overflow: hidden;
+  padding: 20px;
+  z-index: 999;
+}
+
+.toast {
+  width: 35vh;
+  height: 10vh;
+  background-color: #2d2d2d;
+  font-weight: 300;
+  margin: 2vh 0;
+  border: #ff8e3f solid 2px;
+  display: flex;
+  align-items: center;
+  border-radius: 10px;
+  position: relative;
+  animation: slide-left 0.1s ease forwards;
+}
+
+.toast i {
+  margin: 0 3vh;
+  font-size: 2vh;
+  color: green;
+}
+
+.toast .error i {
+  color: red;
+}
+
+.toast::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 0.3vh;
+  background: #ff8e3f;
+  animation: animate 4s linear forwards;
+  border-bottom: #ff8e3f solid 1px;
+  border-bottom-left-radius: 50px;
+}
+
+@keyframes animate {
+  100% {
+    width: 0;
+    right: 100px;
+  }
+}
+
+@keyframes slide-left {
+  from {
+    transform: translateX(100px);
+  }
+  to {
+    transform: translateX(0);
+  }
 }
