--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -268,7 +268,7 @@ body {
   grid-area: complaints-stats-container;
   background-color: #2d2d2d;
   height: 40vh;
-
+  padding: 3vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -440,6 +440,12 @@ body {
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
+  gap: 2vh;
+}
+
+.chart-main-container {
+  height: 27vh;
+  width: 100%;
 }
 
 .chart-buttons-container {
@@ -451,31 +457,30 @@ body {
 .chart-btn {
   height: 3vh;
   background-color: transparent;
-
   font-weight: 100;
-
   padding-left: 2vh;
   padding-right: 2vh;
   border-radius: 5px;
   cursor: pointer;
+  width: 100%;
 }
 
 .contractsbtn {
   border: #caf451 solid 1px;
   color: #caf451;
-  font-size: 1.5vh;
+  font-size: 1.2vh;
 }
 
 .technicianbtn {
   border: #ff8e3f solid 1px;
   color: #ff8e3f;
-  font-size: 1.5vh;
+  font-size: 1.2vh;
 }
 
 .clientbtn {
   border: #80e1ca solid 1px;
   color: #80e1ca;
-  font-size: 1.5vh;
+  font-size: 1.2vh;
 }
 
 .contractsbtn:hover {
